src/test/ui/span/issue-36537.nll.stderr
error: compilation successful
  --> $DIR/issue-36537.rs:11:1
   |
LL | / fn main() { #![rustc_error] // rust-lang/rust#49855
LL | |     let p;
LL | |     let a = 42;
LL | |     p = &a;
LL | |     //~^ ERROR `a` does not live long enough
LL | | }
   | |_^

error: aborting due to previous error

